WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218683
Fix GTK debug build
https://bugs.webkit.org/show_bug.cgi?id=218683
Summary
Fix GTK debug build
Rob Buis
Reported
2020-11-07 07:10:04 PST
Commit
r269435
forgot to account for Frame* -> WeakPtr<Frame> change in this ASSERT.
Attachments
Patch
(1.64 KB, patch)
2020-11-07 07:12 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2020-11-07 07:12:04 PST
Created
attachment 413524
[details]
Patch
EWS
Comment 2
2020-11-07 14:17:08 PST
Committed
r269565
: <
https://trac.webkit.org/changeset/269565
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 413524
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-11-07 14:18:19 PST
<
rdar://problem/71153657
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug