Fix GTK debug build https://bugs.webkit.org/show_bug.cgi?id=218683

Patch by Rob Buis <rbuis@igalia.com> on 2020-11-07
Reviewed by Fujii Hironori.

Commit r269435 forgot to account for Frame* -> WeakPtr<Frame>
change in this ASSERT.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::finishedLoading):

Canonical link: https://commits.webkit.org/231356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269565 268f45cc-cd09-0410-ab3c-d52691b4dbfc